--- a/src/output.css
+++ b/src/output.css
@@ -544,54 +544,46 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.visible {
-  visibility: visible;
+.flex {
+  display: flex;
 }
 
-.collapse {
-  visibility: collapse;
+.h-10 {
+  height: 2.5rem;
 }
 
-.relative {
-  position: relative;
+.w-full {
+  width: 100%;
 }
 
-.block {
-  display: block;
+.items-center {
+  align-items: center;
 }
 
-.table {
-  display: table;
+.justify-center {
+  justify-content: center;
 }
 
-.contents {
-  display: contents;
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
-.hidden {
-  display: none;
+.text-center {
+  text-align: center;
 }
 
-.border-collapse {
-  border-collapse: collapse;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-.resize {
-  resize: both;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.underline {
-  text-decoration-line: underline;
-}
-
-.outline {
-  outline-style: solid;
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
